fix : some bugs in PUT IT and POST IT