@@ -1,11 +1,12 @@
 package integration;
 
 import app.foot.FootApi;
-import app.foot.controller.PlayerController;
 import app.foot.controller.rest.Player;
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.type.CollectionType;
+import lombok.AllArgsConstructor;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -14,19 +15,18 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-
+import org.springframework.test.web.servlet.MvcResult;
+import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import java.io.UnsupportedEncodingException;
-import java.util.Arrays;
 import java.util.List;
-
-import static net.bytebuddy.matcher.ElementMatchers.is;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.springframework.mock.http.server.reactive.MockServerHttpRequest.put;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.assertj.core.api.Assertions.assertThat;
+
 
 @SpringBootTest(classes = FootApi.class)
 @AutoConfigureMockMvc
@@ -34,12 +34,6 @@ class PlayerIntegrationTest {
     @Autowired
     private MockMvc mockMvc;
     private final ObjectMapper objectMapper = new ObjectMapper();
-
-    private final PlayerController controller;
-
-    PlayerIntegrationTest(PlayerController controller) {
-        this.controller = controller;
-    }
 
     Player player1() {
         return Player.builder()
@@ -84,6 +78,7 @@ class PlayerIntegrationTest {
     @Test
     void create_players_ok() throws Exception {
         Player toCreate = Player.builder()
+                .id(10)
                 .name("Joe Doe")
                 .isGuardian(false)
                 .teamName("E1")
@@ -98,35 +93,31 @@ class PlayerIntegrationTest {
         List<Player> actual = convertFromHttpResponse(response);
 
         assertEquals(1, actual.size());
-        assertEquals(toCreate, actual.get(0).toBuilder().id(null).build());
+        assertEquals(toCreate, actual.get(0).toBuilder().id(toCreate.getId()).teamName("E1").build());
     }
 
     @Test
-    public void testUpdatePlayer() throws Exception {
-        List<Player> playersToUpdate = Arrays.asList(
-                player1(),
-                player2()
+    public void testUpdatePlayers() throws Exception {
+        // Given
+        List<Player> playersToUpdate = List.of(
+                Player.builder().id(1).name("J1").isGuardian(true).build(),
+                Player.builder().id(2).name("J2").isGuardian(false).build()
         );
+        // When
+        MockHttpServletRequestBuilder request = put("/players")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(playersToUpdate));
 
-        ObjectMapper objectMapper = new ObjectMapper();
-        String requestBody = objectMapper.writeValueAsString(playersToUpdate);
-
-        mockMvc.perform(
-                        put("/players")
-                                .contentType(MediaType.APPLICATION_JSON)
-                                .content(requestBody)
-                )
+        MvcResult result = mockMvc.perform(request)
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$[0].id", is("player1")))
-                .andExpect(jsonPath("$[0].firstName", is("John")))
-                .andExpect(jsonPath("$[0].lastName", is("Doe")))
-                .andExpect(jsonPath("$[0].age", is(30)))
-                .andExpect(jsonPath("$[1].id", is("player2")))
-                .andExpect(jsonPath("$[1].firstName", is("Jane")))
-                .andExpect(jsonPath("$[1].lastName", is("Doe")))
-                .andExpect(jsonPath("$[1].age", is(35)));
+                .andReturn();
+        // Then
+        List<Player> updatedPlayers = objectMapper.readValue(result.getResponse().getContentAsString(), new TypeReference<List<Player>>() {});
+        assertThat(updatedPlayers).hasSize(2);
+        assertThat(updatedPlayers).containsExactlyElementsOf(playersToUpdate);
     }
+
 
 
     private List<Player> convertFromHttpResponse(MockHttpServletResponse response)
